[project]
name = "dcpmessage"
version = "0.1.0"
description = "package for retrieving GOES DCS message data from LRGS servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
