[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcpmessage"
version = "1.2.2"
description = "package for retrieving GOES DCS message data from LRGS servers."
authors = [{ name = "dcpmessage authors" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "setuptools>=78.1.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
